# pacman-project

./: .gitignore  Makefile  clade.txt  config.json  dijkstra.py  game.py  game_scene.py  generate_ghost_sprites.py  highscores.json  main.py  maze_drawing.py  maze_scene.py  maze_spritesheet.py  menu_scene.py  pac-man.py  pacgum.py  pacman_movements.py  parser.py  play_scene.py  pyproject.toml  scene.py  scene_manager.py  setting_manager.py  settings.py  spritesheet.py  test.py  test2.py
characters/: __init__.py  character.py  ghosts.py  missile.py  pacman.py
pac-man.py/: main.py  pyproject.toml
scenes/: highscore_scene.py  instructions_scene.py  menu_scene.py  name_input_scene.py  play_scene.py  scene.py
